Updated metadata and removed Lovable branding

--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chart-whisperer-45</title>
-    <meta name="description" content="A.I Chart Analysis">
-    <meta name="author" content="Lovable" />
-
-    
-    
+    <title>AnalyseAI</title>
+    <meta name="description" content="A.I Chart Analysis">    
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:title" content="chart-whisperer-45">
-  <meta name="twitter:title" content="chart-whisperer-45">
+    <meta property="og:title" content="AnalyseAI">
+  <meta name="twitter:title" content="AnalyseAI">
   <meta property="og:description" content="A.I Chart Analysis">
   <meta name="twitter:description" content="A.I Chart Analysis">
 </head>
